MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libxdpd_driver_fscale_l2sw_src_util.la

libxdpd_driver_fscale_l2sw_src_util_la_SOURCES = \
					crc32.c\
					time_utils.c\
					l2switch_utils.c\
					flow_entry_utils.c\
					acl_util.cc\
					acl_util.h

libxdpd_driver_fscale_l2sw_src_util_la_LIBADD = 
