MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libxdpd_driver_fscale_l2sw_vtss_l2sw.la

libxdpd_driver_fscale_l2sw_vtss_l2sw_la_SOURCES = \
					ports.c\
					vtss_l2sw.c


libxdpd_driver_fscale_l2sw_vtss_l2sw_la_LIBADD = 

libxdpd_driver_fscale_l2sw_vtss_l2sw_la_LDFLAGS = -L/home/seby/Desktop/l2switch/lib -lvtss_api
